class.c
@@ -165,7 +165,6 @@ class_alloc(VALUE flags, VALUE klass)
     RCLASS_EXT(obj)->parent_subclasses = NULL;
     RCLASS_EXT(obj)->module_subclasses = NULL;
     RCLASS_EXT(obj)->seq = rb_next_class_sequence();
-    RCLASS_EXT(obj)->mc_tbl = NULL;
 
     RCLASS_REFINED_CLASS(obj) = Qnil;
     RCLASS_EXT(obj)->allocator = 0;
